# pacup.py

./: .pre-commit-config.yaml  LICENSE  LICENSE_BOILERPLATE  README.md  pyproject.toml  renovate.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  FEATURE-REQUEST.yml
.github/workflows/: CD.yml  codeql-analysis.yml
pacup/: __init__.py  __main__.py  parser.py  release_notes.py  test.py  utils.py  version.py
