[tool.poetry]
name = "pacup"
version = "1.0.2"
description = "Help maintainers update pacscripts"
readme = "README.md"
authors = ["Sourajyoti Basak <wiz28@protonmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/pacstall/pacup"
documentation = "https://github.com/pacstall/pacup/wiki"
keywords = [
	"aur",
	"cli",
	"command line",
	"console",
	"debian",
	"pacscript",
	"pacstall",
	"ubuntu",
	"repology",
]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Console",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
	"Operating System :: POSIX :: Linux",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: System",
	"Topic :: Utilities",
	"Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
httpx = ">=0.22,<0.24"
rich = "^13.0.0"
typer = ">=0.4.1,<0.8.0"
packaging = ">=23,<23.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
codespell = "^2.2.2"
isort = "^5.11.2"
mypy = "^0.991"
pre-commit = "^2.20.0"
pytest = "^7.2.0"
pyupgrade = "^3.3.1"

[tool.poetry.group.build]
optional = true

[tool.poetry.group.build.dependencies]
pyinstaller = "^5.7.0"

[tool.isort]
balanced_wrapping = true
combine_star = true
group_by_package = true
known_first_party = ["pacstall"]
lexicographical = true
profile = "black"
py_version = 38

[tool.mypy]
disallow_untyped_decorators = false
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = true

[tool.poetry.scripts]
pacup = "pacup.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
