#     ____             __  __
#    / __ \____ ______/ / / /___
#   / /_/ / __ `/ ___/ / / / __ \
#  / ____/ /_/ / /__/ /_/ / /_/ /
# /_/    \__,_/\___/\____/ .___/
#                       /_/
#
# Copyright (C) 2022-present
#
# This file is part of PacUp
#
# PacUp is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# PacUp is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with PacUp.  If not, see <https://www.gnu.org/licenses/>.

[tool.poetry]
name = "pacup"
version = "2.0.0"
description = "Help maintainers update pacscripts"
readme = "README.md"
authors = ["Sourajyoti Basak <wiz28@protonmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/pacstall/pacup"
documentation = "https://github.com/pacstall/pacup/wiki"
keywords = [
  "aur",
  "cli",
  "command line",
  "console",
  "debian",
  "pacscript",
  "pacstall",
  "ubuntu",
  "repology",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: System",
  "Topic :: Utilities",
  "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
httpx = ">=0.24,<0.25"
rich = "^13.0.0"
typer = ">=0.9.0,<0.10.0"
packaging = ">=23,<23.2"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
codespell = "^2.2.2"
isort = "^5.11.2"
mypy = "^1.0"
pre-commit = "^3.0.0"
pytest = "^7.2.0"
pyupgrade = "^3.3.1"

[tool.poetry.group.build]
optional = true

[tool.poetry.group.build.dependencies]
pyinstaller = "^5.7.0"

[tool.isort]
balanced_wrapping = true
combine_star = true
group_by_package = true
known_first_party = ["pacstall"]
lexicographical = true
profile = "black"
py_version = 38

[tool.mypy]
disallow_untyped_decorators = false
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = true

[tool.poetry.scripts]
pacup = "pacup.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
